# glsl

./: .gitignore  CMakeLists.txt
assets/: frag.glsl  shape_frag.glsl  shape_vert.glsl  text_frag.glsl  text_vert.glsl  vert.glsl
assets/models/: cube.mtl  cubes.mtl  ship.blend1  test.mtl
assets/models/ship/: ship.mtl
assets/models/ship/z_ship.obj_cache/: 0  1  10  11  12  13  14  15  16  17  18  19  2  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  45  (+15 more)
assets/models/z_cube.obj_cache/: 0
assets/shaders/: fb_frag.glsl  fb_vert.glsl  sb_frag.glsl  sb_vert.glsl  scene_buffer.glsl  shape_frag.glsl  shape_vert.glsl  text_vert.glsl
include/GLFW/: glfw3.h
include/KHR/: khrplatform.h
include/glad/: glad.h
include/glm/: common.hpp  geometric.hpp
include/glm/detail/: _features.hpp  setup.hpp  type_half.inl  type_mat2x2.inl  type_mat2x3.inl  type_mat2x4.inl  type_mat3x3.inl  type_mat4x2.inl  type_mat4x3.inl  type_mat4x4.inl
include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_projection.hpp  matrix_projection.inl  matrix_transform.hpp
include/glm/gtc/: quaternion.hpp  quaternion.inl  type_ptr.hpp
include/stb_image/: stb_image.h
include/tiny_obj_loader/: tiny_obj_loader.h
src/: main.cpp  pch.h
src/glad/: glad.c
src/glmisc/: Camera.cpp  Camera.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexBufferObject.cpp  VertexBufferObject.h  gl_misc.cpp  gl_misc.h
src/glmisc/entities/: Shape.cpp  Shape.h  TexturedShape.cpp  TexturedShape.h
src/glmisc/gl/: Material.cpp  Material.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexBufferObject.cpp  VertexBufferObject.h
src/glmisc/objects/: GObject.cpp  GObject.h  Light.cpp  Light.h  Skybox.cpp  Skybox.h
src/glmisc/render/: Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  TextureCubemap.cpp  TextureCubemap.h  UniformBufferObject.cpp  UniformBufferObject.h  VertexBufferObject.cpp  VertexBufferObject.h
src/glmisc/scene/: Camera.h  Scene.cpp  Scene.h
src/glmisc/store/: Store.cpp  Store.h
src/glmisc/text/: TextObject.cpp  TextObject.h
